--- a/package.json
+++ b/package.json
@@ -17,10 +17,26 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "yarn run eslint && react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "eslint": "eslint ./"
   },
   "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.14.3",
     "react-scripts": "^1.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run eslint"
+    }
   }
+
 }
