websocket price updates

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-thunk": "^2.2.0",
     "sanitize.css": "^5.0.0",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.3"
+    "semantic-ui-react": "^0.78.3",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
