prices container and selector

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "highcharts": "^6.0.7",
     "idiot": "^2.0.1",
     "moment": "^2.21.0",
+    "re-reselect": "^1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-highcharts": "^16.0.2",
@@ -15,6 +16,7 @@
     "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "sanitize.css": "^5.0.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
