--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.5.0",
     "react-highcharts": "^16.0.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
