--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "highcharts": "^6.0.7",
     "idiot": "^2.0.1",
     "moment": "^2.21.0",
+    "normalizr": "^3.2.4",
     "re-reselect": "^1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -27,7 +28,8 @@
     "build": "react-scripts build",
     "test": "yarn run eslint && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "eslint": "eslint ./"
+    "eslint": "eslint ./",
+    "prepush": "yarn run eslint"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
@@ -43,7 +45,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run eslint"
+      "pre-push": "yarn run eslint"
     }
   }
 }
