--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-eslint": "^8.2.3",
     "cheerio": "^1.0.0-rc.2",
     "cloudscraper": "^1.5.0",
     "highcharts": "^6.0.7",
