--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sanitize.css": "^5.0.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.81.1",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "velocity-react": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +49,8 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "react-scripts": "^1.1.1"
+    "react-scripts": "^1.1.1",
+    "redux-mock-store": "^1.5.3"
   },
   "husky": {
     "hooks": {
