rename to hotwallet

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trrgn/tarragon-react",
+  "name": "@hotwallet/hotwallet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
