--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cloudscraper": "^1.5.0",
     "highcharts": "^6.0.7",
     "idiot": "^2.0.1",
+    "ledger-sdk": "^1.2.0",
     "moment": "^2.21.0",
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
@@ -30,7 +31,7 @@
     "socket.io-client": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "yarn run eslint && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
