--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "babel-eslint": "^8.2.3",
+    "bip39": "^2.5.0",
+    "elliptic": "^6.4.1",
     "highcharts": "^6.0.7",
     "idiot": "^2.0.1",
     "ledger-sdk": "^1.2.2",
@@ -47,7 +49,8 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "react-scripts": "^1.1.1"
+    "react-scripts": "^1.1.1",
+    "text-encoding": "^0.6.4"
   },
   "husky": {
     "hooks": {
