--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "socket.io-client": "^2.0.4"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
-    "start-http": "react-scripts start",
+    "start": "react-scripts start",
+    "start-ssl": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "yarn run eslint && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
