--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "react-scripts": "^1.1.1",
-    "text-encoding": "^0.6.4"
+    "react-scripts": "^1.1.1"
   },
   "husky": {
     "hooks": {
