--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sanitize.css": "^5.0.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.82.5",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "trezor-connect": "^5.0.33"
   },
   "scripts": {
     "start": "react-scripts start",
