dynamic ledger symbols and trezor connect button

--- a/package.json
+++ b/package.json
@@ -55,5 +55,11 @@
     "hooks": {
       "pre-push": "yarn run eslint"
     }
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
