remove trezor connect lib since we're using cdn

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "sanitize.css": "^5.0.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.82.5",
-    "socket.io-client": "^2.0.4",
-    "trezor-connect": "^5.0.33"
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
