--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start": "react-scripts start",
     "start-ssl": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn run eslint && jest",
+    "test": "yarn run eslint && PORT=3000 jest",
     "eject": "react-scripts eject",
     "eslint": "eslint ./",
     "prepush": "yarn run eslint",
