--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "start": "react-scripts start",
     "start-ssl": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn run eslint && PORT=3000 jest",
+    "test": "yarn run eslint && PORT=3000 jest --coverage",
     "eject": "react-scripts eject",
     "eslint": "eslint ./",
     "prepush": "yarn run eslint",
-    "ci": "serve -s build & jest"
+    "ci": "serve -s build & jest --coverage"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
