--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn run build
-      - run: yarn run ci
+      #- run: yarn run build
+      #- run: yarn run ci
 
 
