--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^0.14.3",
     "puppeteer": "^1.9.0",
-    "react-scripts": "^2.0.4"
+    "react-scripts": "^2.0.4",
+    "serve": "^10.0.2"
   },
   "engines": {
     "node": "8"
