--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-ssl": "HTTPS=true react-scripts start",
-    "build": "react-scripts build",
+    "build": "node patch-react-scripts && react-scripts build",
     "test": "yarn run eslint && PORT=3000 jest --coverage",
     "eject": "react-scripts eject",
     "eslint": "eslint ./",
