--- a/cordova/package.json
+++ b/cordova/package.json
@@ -11,12 +11,18 @@
     "license": "UNLICENSED",
     "dependencies": {
         "cordova-android": "^7.1.1",
-        "cordova-ios": "4.5.5",
-        "cordova-plugin-statusbar": "^2.4.2"
+        "cordova-ios": "^4.5.5",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-statusbar": {}
-        }
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "ios",
+            "android"
+        ]
     }
 }
