settings page pouchdb demo

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "ledger-sdk": "^2.1.0",
     "moment": "^2.21.0",
     "normalizr": "^3.2.4",
+    "pouchdb": "^7.0.0",
+    "pouchdb-connect": "^1.1.0",
+    "pouchdb-find": "^7.0.0",
     "prop-types": "^15.6.1",
     "re-reselect": "^1.0.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-ga": "^2.5.0",
     "react-highcharts": "^16.0.2",
     "react-redux": "^5.0.6",
