--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "highcharts": "^6.0.7",
     "idiot": "^2.0.1",
     "ledger-sdk": "^2.1.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.flowright": "^3.5.0",
     "moment": "^2.21.0",
     "normalizr": "^3.2.4",
     "pouchdb": "^7.0.0",
