--- a/package.json
+++ b/package.json
@@ -51,14 +51,12 @@
     "eslint-plugin-jest": "^21.24.1",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^0.14.3",
     "puppeteer": "^1.9.0",
     "react-scripts": "^2.0.4",
     "serve": "^10.0.2"
-  },
-  "engines": {
-    "node": "8"
   },
   "husky": {
     "hooks": {
